log
Thu 16 May 2024 05:58:59 PM UTC: 
 tests:  0|5
total_score: 0/70
7e9b849
Thu 16 May 2024 06:32:32 PM UTC: 
 sudoku.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘get_adj_nodes’:
sudoku.c:60:27: error: iteration 9 invokes undefined behavior [-Werror=aggressive-loop-optimizations]
   60 |             if(n-> sudo[i][j] == 0)
      |                ~~~~~~~~~~~^~~
sudoku.c:58:25: note: within this loop
   58 |       for(size_t j=0; j <= 9; j++)
      |                       ~~^~~~
sudoku.c:72:52: error: ‘fila_vacia’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   72 |       nuevo_nodo-> sudo[fila_vacia][columna_vacia] = i + 1;
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
332f770
Thu 16 May 2024 06:33:07 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:72:52: error: ‘fila_vacia’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   72 |       nuevo_nodo-> sudo[fila_vacia][columna_vacia] = i + 1;
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5d03c58
Thu 16 May 2024 06:33:28 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:72:52: error: ‘fila_vacia’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   72 |       nuevo_nodo-> sudo[fila_vacia][columna_vacia] = i + 1;
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
75013b2
Thu 16 May 2024 06:35:21 PM UTC: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
691fb92
Thu 16 May 2024 08:23:15 PM UTC: 
 sudoku.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘se_encuentra’:
sudoku.c:49:1: error: expected expression before ‘}’ token
   49 | }
      | ^
sudoku.c: In function ‘is_valid’:
sudoku.c:59:13: error: expected expression before ‘}’ token
   59 |             }
      |             ^
sudoku.c:57:22: error: unused variable ‘lista_columnas’ [-Werror=unused-variable]
   57 |                List *lista_columnas = createList();
      |                      ^~~~~~~~~~~~~~
test.c: In function ‘se_encuentra’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
In file included from test.c:5:
sudoku.c:48:10: error: unused variable ‘aux’ [-Werror=unused-variable]
   48 |    List *aux =
      |          ^~~
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
32dec5d
Thu 16 May 2024 08:35:11 PM UTC: 
 sudoku.c | 16 +++++++++-------
 1 file changed, 9 insertions(+), 7 deletions(-)
 tests:  2|4
total_score: 15/70
e9af60b
Thu 16 May 2024 08:44:13 PM UTC: 
 sudoku.c | 24 +++++++++++++++++++++---
 1 file changed, 21 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
3ba7a87
Thu 16 May 2024 09:00:38 PM UTC: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  2|4
total_score: 15/70
94ab1e3
Thu 16 May 2024 09:01:02 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
7bf88bf
Thu 16 May 2024 09:01:51 PM UTC: 
 sudoku.c | 46 +++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 45 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
2130529
Thu 16 May 2024 09:03:32 PM UTC: 
 sudoku.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
e7e8c33
Thu 16 May 2024 09:05:39 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
05e2c07
Thu 16 May 2024 09:06:31 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:171:1: error: control reaches end of non-void function [-Werror=return-type]
  171 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
489f6de
Thu 16 May 2024 09:06:49 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
1f384fe
Thu 16 May 2024 09:07:04 PM UTC: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 45/70
b30218d
Sat 18 May 2024 03:11:36 AM UTC: 
 sudoku.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  0|0
5c1e3ca
Sat 18 May 2024 03:12:54 AM UTC: 
 sudoku.c | 73 +++++++++++++++++++++++++++++++++++++++-------------------------
 1 file changed, 45 insertions(+), 28 deletions(-)
 tests:  7|2
total_score: 50/70
07f0162
Sat 18 May 2024 03:22:23 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|2
total_score: 50/70
bd24f9c
Sat 18 May 2024 03:57:38 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|2
total_score: 50/70
d8bf06f
Sat 18 May 2024 04:04:10 AM UTC: 
 sudoku.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:190:55: error: ‘columna_vacia’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
  190 |          nuevo_nodo-> sudo[fila_vacia][columna_vacia] = i + 1;
      |          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
sudoku.c:190:55: error: ‘fila_vacia’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
cc1: all warnings being treated as errors
Compilation failed
2f42097
Sat 18 May 2024 04:04:43 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|2
total_score: 50/70
02dc00c
Sat 18 May 2024 04:05:18 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|2
total_score: 50/70
de1d124
Sat 18 May 2024 04:06:21 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
c2918c1
